backstage-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: docker.io/verranm/backstage:0.0.93
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
              name: backend
            - containerPort: 3000
              name: frontend
