backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  namespace: backstage
spec:
  type: ClusterIP
  ports:
    - name: frontend
      port: 3000
      targetPort: 3000
    - name: backend
      port: 7007
      targetPort: 7007
  selector:
    app: backstage
